syntax = "proto3";

option go_package = ".;pb";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc PrintAgeByYear (YearRequest) returns (AgeResponse) {}

  rpc GreetsStream(HelloRequest) returns (stream HelloReply){}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greeting.
message HelloReply {
  string message = 1;
}

message YearRequest{
  int32 year = 1;
}

message AgeResponse{
  int32 age = 1;
}